[package]
name = "axum_course"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "^0.7" }
tokio = { version = "^1.42", features = ["full"] }
tower-http = { version = "^0.6" }
log = "^0.4"
env_logger = "^0.11"

[dev-dependencies]
anyhow = "^1.0"
httpc-test = "^0.1"
tower = { version = "^0.5", features = ["util"] }
http-body-util = "^0.1"
