[package]
name = "axum_course"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "^0.8" }
tokio = { version = "^1.48", features = ["full"] }
tower-http = { version = "^0.6" }
sqlx = { version = "0.8.6", features = [ "runtime-tokio" ] }
sqlx-postgres = "0.8.6"
log = "^0.4"
env_logger = "^0.11"
chrono = "^0.4"
serde_json = "^1.0"

[dev-dependencies]
httpc-test = "^0.1"
tower = { version = "^0.5", features = ["util"] }
http-body-util = "^0.1"
